Fix font alignment and size

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,11 @@
+.percent-label.svelte-h0vqv3 {
+    display: inline !important;
+}
+
 .amount-required-label {
     margin-left: 10px;
+	font-size: var(--text-size-base);
+	font-weight: 550;
 }
 
 .amount-spent-label {
@@ -12,4 +18,6 @@
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 10px;
     padding: 0 5px;
+	font-size: var(--text-size-base);
+	font-weight: 550;
 }
